# mystia-steward-companion

./: .gitignore  NOTICE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  run-dev.sh  stop-dev.sh  vite.config.ts
.github/: copilot-instructions.md
apps/companion/: index.html
apps/companion/src/: App.tsx  index.css  main.tsx
apps/companion/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
apps/companion/src-tauri/icons/: icon.icns
apps/companion/src-tauri/src/: lib.rs  main.rs
docs/: addressables-tag-mapping-playbook.md  development-conventions.md  github-actions-release.md  local-release.md  mystia-steward-bepinex-progress.md  mystia-steward-companion-progress.md  repo-memory.md  special-business-scenes-notes.md  tmi-cooking-mechanics-knowledge-base.md
mods/bepinex/: MystiaStewardCompanion.BepInEx.csproj  README.dev.md  README.md
mods/bepinex/References/: README.md
mods/bepinex/docs/: RUNTIME_PROVIDER_NOTES.md
mods/bepinex/tools/: build-release.ps1  package-release.ps1  package-release.sh  preflight.ps1  preflight.sh  publish-release.ps1  set-version.sh  sync-data.sh
mods/mystia-steward-bepinex/: MystiaSteward.BepInEx.csproj  README.dev.md  README.md
mods/mystia-steward-bepinex/References/: README.md
mods/mystia-steward-bepinex/docs/: IMPLEMENTATION_PLAN.md  RUNTIME_PROVIDER_NOTES.md
mods/mystia-steward-bepinex/tools/: build-release.ps1  package-release.ps1  (+3 more)
scripts/: build-android-signed-apk.mjs  mock-local-api.mjs  playwright-gamepad-audit.mjs  playwright-ui-audit.mjs
src-tauri/: tauri.conf.json
(+131 files in other folders)
