[package]
name = "mystia-steward-companion"
version = "1.1.0"
description = "Desktop companion window for mystia-steward-companion"
authors = ["mystia-steward-companion contributors"]
edition = "2021"

[lib]
name = "mystia_steward_companion"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mystia-steward-companion"
path = "src/main.rs"

[[bin]]
name = "mystia-steward-companion-updater"
path = "src/bin/updater.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
